service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: horde-service
spec:
  type: NodePort
  selector:
    app: horde-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
